--- a/views/groups.erb
+++ b/views/groups.erb
@@ -24,20 +24,79 @@
 		 var i;
 		 for(i=0;i<result.length;i++)
 		 {
-			 groups.append('<option value="'+i+'">'+result[i]+'</option>');
+			 groups.append('<option value="'+result[i]+'">'+result[i]+'</option>');
 		 }
    	     var selected =  $("#selected");
    	     selected.html("Groups that " + a +" belongs to" );
        }});
     });
 	
+    $("#src-user").change(function(){	
+      var a = $("#src-user").val();  
+      $.ajax({url:"/search?q="+a,success:function(result){
+         var groups=$("#src-select");
+         groups.html("");
+		 var i;
+		 for(i=0;i<result.length;i++)
+		 {
+			 groups.append('<option value="'+result[i]+'">'+result[i]+'</option>');
+		 }
+		 var result = $("#result-select");
+		result.html("");
+		result.append($("#src-select").html());
+		result.append($("#dst-select").html());
+		
+		var foundedinputs = [];
+		    $("select[name=result] option").each(function() {
+		      if($.inArray(this.value, foundedinputs) != -1) $(this).remove();
+		      foundedinputs.push(this.value);
+		    });
+		
+       }});
+    });
+	
+    $("#dst-user").change(function(){	
+      var a = $("#dst-user").val();  
+      $.ajax({url:"/search?q="+a,success:function(result){
+         var groups=$("#dst-select");
+         groups.html("");
+		 var i;
+		 for(i=0;i<result.length;i++)
+		 {
+			 groups.append('<option value="'+result[i]+'">'+result[i]+'</option>');
+		 }
+		 var result = $("#result-select");
+		result.html("");
+		result.append($("#src-select").html());
+		result.append($("#dst-select").html());
+		
+		var a = $("#dst-user").val(); 
+		$("#result-text").html("How "+a+" groups will look like:")
+		
+		var foundedinputs = [];
+		    $("select[name=result] option").each(function() {
+		      if($.inArray(this.value, foundedinputs) != -1) $(this).remove();
+		      foundedinputs.push(this.value);
+		    });
+		 
+       }});
+    });
+	
+	
+	
+	
+	
+	
 	
     $("#copy").click(function(){
-	  $("#teste").html("ENTROU AQUI")	
+	  var loading = $("<img id='loading' src='http://www.wallpaperama.com/post-images/forums/200903/07p-6606-loading-circle-.gif'/>").insertAfter(this);
+	  $("#resultado").html("Loading...");	
       var src = $("#src-user").val();
 	  var dst = $("#dst-user").val();  
       $.ajax({url:"/transfer",data:{destination:dst,source:src},success:function(result){
          
+		  $("#resultado").html(result);
+		  loading.remove();
        }});
     });
 	
@@ -84,7 +143,6 @@
       </div>
       <div class="span8">
         <select name="groups" id="groups" multiple="yes" disabled="disabled">
-          
         </select>
       </div>
     </div>
@@ -105,7 +163,7 @@
         <h4>Pick destination user</h4>
       </div>
       <div class="span6">
-        <h4>Groups that #{} belongs to</h4>
+        <h4 id="result-text"></h4>
       </div>
     </div>
     <!-- SELECTION BOXES -->
@@ -128,11 +186,27 @@
         <button class="btn btn-info" type="submit" id="copy">&nbsp;Copy!&nbsp;</button>
       </div>
     </div>
+    <div class="row">
+		<div class="span3">
+	        <select id="src-select" multiple="yes" disabled="disabled">
+	        </select>
+		</div>
+		<div class="span3">
+	        <select id="dst-select" multiple="yes" disabled="disabled">
+			</select>
+		</div>
+		<div class="span6">
+	        <select name="result" id="result-select" multiple="yes" disabled="disabled">
+			</select>
+		</div>
+	</div>
     <!-- STATUS -->
     <div class="row">
-      <div class="span12">
-        <p class="text-info">Resultado</p>
+      <div class="span6">
       </div>
+	  <div class="span6">
+          <p id="resultado" class="text-info">Resultado</p>
+	  </div>
     </div>
 
   </div>
